bdr.BDR.scala.error
Erreur de compilation :
BDR:1: error: illegal start of simple pattern
var : String instruction = " " 
    ^BDR:3: error: '=' expected but '}' found.
	}
        ^